上架前存檔
廣告代號還沒換

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">CircularIME</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="adContentText">We\'ve picked an ad for you, and you might like it.</string>
+    <string name="adContentOptionAgree">YES</string>
+    <string name="adContentOptionCancel">NO</string>
+
 </resources>
