--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CircularIME</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-4893753791097882/1816146455</string>
-    <string name="adContentText">We\'ve picked an ad for you, and you might like it.</string>
+    <string name="adContentText">Doggy\'ve picked an ad for you, and you might like it.</string>
     <string name="adContentOptionAgree">YES</string>
     <string name="adContentOptionCancel">NO</string>
 
